# Personal-page

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs  state.rs
backend/src/config/: database.rs  settings.rs
backend/src/handlers/: auth.rs  captcha.rs  health.rs  mod.rs
backend/src/services/: user_service.rs
backend/src/utils/: auth.rs
deploy/docker-compose/: docker-compose.yml
deploy/docker-compose/migrations/: 001_init.sql
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: auth.ts  request.ts
frontend/src/layouts/: BasicLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  index.ts
frontend/src/views/auth/: Login.vue  Register.vue
frontend/src/views/dashboard/: Dashboard.vue
